/*
Copyright IBM Corp. All Rights Reserved.

SPDX-License-Identifier: Apache-2.0
*/

syntax = "proto3";

import "common/collection.proto";

package lifecycle;

option java_package = "org.hyperledger.fabric.protos.peer.lifecycle";
option go_package = "github.com/hyperledger/fabric/protos/peer/lifecycle";

// InstallChaincodeArgs is the message used as the argument to
// '+lifecycle.InstallChaincode'
message InstallChaincodeArgs {
    string name = 1;
    string version = 2;
    bytes chaincode_install_package = 3; // This should be a marshaled peer.ChaincodeInstallPackage
}

// InstallChaincodeArgs is the message returned by
// '+lifecycle.InstallChaincode'
message InstallChaincodeResult {
    bytes hash = 1;
}

// QueryInstalledChaincodeArgs is the message used as arguments
// '+lifecycle.QueryInstalledChaincode'
message QueryInstalledChaincodeArgs {
    string name = 1;
    string version = 2;
}

// QueryInstalledChaincodeResult is the message returned by
// '+lifecycle.QueryInstalledChaincode'
message QueryInstalledChaincodeResult {
    bytes hash = 1;
}

// QueryInstalledChaincodesArgs currently is an empty argument to
// '+lifecycle.QueryInstalledChaincodes'.   In the future, it may be
// extended to have parameters.
message QueryInstalledChaincodesArgs {
}

// QueryInstalledChaincodesResult is the message returned by
// '+lifecycle.QueryInstalledChaincodes'.  It returns a list of
// installed chaincodes.
message QueryInstalledChaincodesResult {
    message InstalledChaincode {
        string name = 1;
        string version = 2;
        bytes hash = 3;
    }
    repeated InstalledChaincode installed_chaincodes = 1;
}

// DefineChaincodeForMyOrgArgs is the message used as arguments to
// `+lifecycle.DefineChaincodeForMyOrg`.
message DefineChaincodeForMyOrgArgs {
    int64 sequence = 1;
    string name = 2;
    string version = 3;
    bytes hash = 4;
    string endorsement_plugin = 5;
    string validation_plugin = 6;
    bytes validation_parameter = 7;
    common.CollectionConfigPackage collections = 8;
}

// DefineChaincodeForMyOrgResult is the message returned by
// `+lifecycle.DefineChaincodeForMyOrg`. Currently it returns
// nothing, but may be extended in the future.
message DefineChaincodeForMyOrgResult {
}

// DefineChaincodeArgs is the message used as arguments to
// `+lifecycle.DefineChaincode`.
message DefineChaincodeArgs {
    int64 sequence = 1;
    string name = 2;
    string version = 3;
    bytes hash = 4;
    string endorsement_plugin = 5;
    string validation_plugin = 6;
    bytes validation_parameter = 7;
    common.CollectionConfigPackage collections = 8;
}

// DefineChaincodeResult is the message returned by
// `+lifecycle.DefineChaincode`. Currently it returns
// nothing, but may be extended in the future.
message DefineChaincodeResult {
}

// QueryDefinedChaincode is the message used as arguments to
// `+lifecycle.QueryDefinedChaincode`.
message QueryDefinedChaincodeArgs {
    string name = 1;
}

// DefineChaincodeResult is the message returned by
// `+lifecycle.QueryDefinedChaincode`.
message QueryDefinedChaincodeResult {
    int64 sequence = 1;
    string name = 2;
    string version = 3;
    bytes hash = 4;
    string endorsement_plugin = 5;
    string validation_plugin = 6;
    bytes validation_parameter = 7;
    common.CollectionConfigPackage collections = 8;
}

// QueryDefinedNamespaces is the message used as arguments to
// `+lifecycle.QueryDefinedNamespaces`.
message QueryDefinedNamespacesArgs {
}

// QueryDefinedNamespaces is the message returned by
// `+lifecycle.QueryDefinedNamespaces`.
message QueryDefinedNamespacesResult {
    message Namespace{
        string type = 1;
    }

    map<string,Namespace> namespaces = 1; // A map from namespace name to namespace
}
